<resources>
    <string name="app_name">Musemium</string>
    <string name="action_settings">Settings</string>


    <!-- Texts -->
    <string name="speechbtn_default">Pulsa para hablar</string>
    <string name="speechbtn_listening">Escuchando…</string>
    <string name="initial_prompt">¡Bienvenido al museo! Pulsa de nuevo para hacer una pregunta sobre la colección y los artistas.</string>

    <string name="question_repeater_default">Escucha tu pregunta</string>

    <string name="check_internet_connection">Por favor, compruebe su conexión a internet</string>

    <string name="asr_permission">Necesito el micrófono para funcionar :(</string>
    <string name="asr_permission_notgranted">Lo siento, la aplicación no puede funcionar sin el micrófono. Acepta para que pueda ayudarte.</string>
    <string name="asr_notsupported">ASR no es soportado :(</string>
    <string name="asr_results">Los resultados están disponibles</string>
    <string name="asr_invalid_params">Parámetros inválidos para reconocimiento</string>
    <string name="asr_error">No he podido escuchar bien</string>
    <string name="asr_readyforspeech">¡Ya puedes hablar!</string>
    <string name="asr_beginningofspeech">Has empezado a hablar ;)</string>
    <string name="asr_buffer">Buffer recibido</string>
    <string name="asr_endofspeech">Has parado de hablar</string>
    <string name="asr_parcialresult">Resultados parciales recibidos</string>
    <string name="asr_error_audio"> Error de reconocimiento de audio</string>
    <string name="asr_error_client">Oops, ha habido un error desconocido por parte del cliente. Inténtalo de nuevo.</string>
    <string name="asr_error_permissions">Por favor, necesito permiso para acceder al micrófono para escuchar tus preguntas.</string>
    <string name="asr_error_network">Oops, ha habido un error relacionado con la red. Inténtalo de nuevo.</string>
    <string name="asr_error_networktimeout">Oops, se ha perdido la conexión. Inténtalo de nuevo.</string>
    <string name="asr_error_nomatch">No he podido procesar correctamente la pregunta</string>
    <string name="asr_error_recognizerbusy">Por favor no me satures. Déjame un momento que estoy procesando la petición</string>
    <string name="asr_error_server">Oops, el servidor manda un estado de error.</string>
    <string name="asr_error_speechtimeout">No he escuchado correctamente. Por favor, repite la pregunta</string>
    <string name="asr_notstarted">No se ha podido comenzar la grabación</string>

    <!-- ModelViewer3D -->
    <string name="about">About…</string>
    <string name="about_text">Copyright © 2017–2018 Dmitry Brant.</string>
    <string name="load_sample">Load sample</string>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model.</string>
    <string name="view_vr">View in VR mode</string>
    <string name="view_vr_not_loaded">Please load a model first.</string>

    <!-- Camera -->
    <string name="camera_permissions_denied">Por favor, permita el acceso a la cámara para poder usar el lector de QR</string>
    <!-- onShake messages -->
    <string name="onShake_toast">Has agitado el dispositivo. Esto muestra información sobre una obra al azar.</string>
    <string name="randArtWork_msg">%s es una obra de %s que data del %s. Se encuentra en %s, %s.</string>

    <!-- Colors -->
    <color name="speechbtn_default">#EEEEEE</color>
    <color name="speechbtn_listening">#99FFBB</color>
    <color name="speechbtn_thinking">#9bc1ff</color>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="initial_textView_message">Puedes hacerme una pregunta, ¿no conoces la colección del museo? Tenemos a disposición obras de museos de todo el mundo. \n\n ¿Necesitas inspiración? Prueba a agitar el dispositivo para que muestre una obra al azar.</string>
    <string name="button">Ver 3D</string>
    <string name="qr_button_text">QR</string>
    <string name="ajustes">Ajustes</string>
    <string name="umbral_agitado">Umbral agitado</string>
    <string name="creditos">Musemium es una aplicación realizada por Pablo Baeyens, Francisco Morales y Jesús Sánchez a partir de los proyectos de Github
        zoraidacallejas/Chatbot, dlazaro66/QRCodeReaderView y dbrant/ModelViewer3D. \n\n Los modelos 3D se han obtenido de Scan The World.
        </string>
    <string name="opciones">Opciones</string>
    <string name="button3d">3D</string>
    <string name="queryTag">Consulta:</string>
    <string name="speechbtn_thinking">Pensando...</string>
</resources>
