<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="conversandroid.MainActivity"
    >

    <Button
        android:id="@+id/speech_btn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="0dp"
        android:text="@string/speechbtn_default"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/queryResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/queryText"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/launch3d_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="17dp"
        android:layout_toStartOf="@+id/options_button"
        android:layout_toEndOf="@+id/qr_scanner"
        android:text="@string/button3d" />

    <Button
        android:id="@+id/qr_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/speech_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/qr_button_text" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/speech_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/opciones" />

    <TextView
        android:id="@+id/queryText"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speech_btn"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/queryTextTag"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/queryTextTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speech_btn"
        android:layout_alignStart="@+id/speech_btn"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/queryTag"
        android:textColor="@android:color/black" />

</RelativeLayout>
